# CS2-Bot-WeaponLock

./: .gitignore  CMakeLists.txt  README.md  gamedata.json
scripts/: BotLocker.NativeApi.cs
src/: BotLocker.cpp  BotLocker.h  BotLockerState.cpp  BotLockerState.h  InputInjector.cpp  InputInjector.h  commands.cpp  dispatch.cpp  dispatch.h  exports.cpp  plugin.cpp
